# veniceresch

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  VENICERESCH_REVIEW.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml
issues/: 01-typed-response-models.md  02-openai-compat-chat-namespace.md  03-stream-true-in-create.md  04-typed-transport-exceptions.md  README.md
scripts/: regen_types.sh
src/venice_sdk/: __init__.py  _base_model.py  _client.py  _errors.py  _generated.py  types.py
src/venice_sdk/resources/: __init__.py  _sse.py  audio.py  billing.py  chat.py  embeddings.py  image.py  models.py  video.py
src/veniceresch/: __init__.py  _client.py  _errors.py  _generated.py  _version.py  pagination.py  types.py
src/veniceresch/resources/: _polling.py  _sse.py  _uploads.py  api_keys.py  audio.py  augment.py  billing.py  characters.py  chat.py  crypto.py  embeddings.py  image.py  images.py  models.py  responses.py  video.py  x402.py
tests/: conftest.py  test_api_keys.py  test_audio.py  test_augment.py  test_billing.py  test_characters.py  test_chat.py  test_client.py  test_crypto.py  test_embeddings.py  test_errors.py  test_image.py  test_images.py  test_models.py  test_pagination.py  test_polling.py  test_responses.py  test_smoke.py  test_sse.py  test_sync_async_parity.py  test_transport_errors.py  test_uploads.py  test_video.py  test_x402.py
tests/integration/: test_live.py
